<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="@color/light_yellow"
        android:id="@+id/cardTodoDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvTodoDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <EditText
        android:id="@+id/edtTodoDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="Todo..."
        android:textColor="@color/blackish"
        android:ellipsize="end"
        android:textSize="14sp"
        android:gravity="start|top"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        app:layout_constraintBottom_toTopOf="@+id/tvPriorityView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardTodoDialogTitle" />

    <TextView
        android:id="@+id/tvPriorityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/priority"
        android:layout_marginStart="10dp"
        android:textColor="@color/blackish"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnTodoDialogDiscard"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spnTodoPriorities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:entries="@array/priorities"
        app:layout_constraintBottom_toBottomOf="@+id/tvPriorityView"
        app:layout_constraintStart_toEndOf="@+id/tvPriorityView"
        app:layout_constraintTop_toTopOf="@+id/tvPriorityView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTodoDialogDiscard"
        style="@style/forButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/discard"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnTodoDialogSave" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTodoDialogSave"
        style="@style/forButtons2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>